# howso-engine-py

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  LICENSE-3RD-PARTY.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  a29b016e-b932-49ed-9bea-2e0da75bc663.caml  hatch.toml  out.txt  pyproject.toml  pyrightconfig.json  requirements-3.10-dev.txt  requirements-3.10.txt  requirements-3.11-dev.txt  requirements-3.11.txt  requirements-3.12-dev.txt  requirements-3.12.txt  requirements-3.13-dev.txt  requirements-3.13.txt  requirements-3.14-dev.txt  requirements-3.14.txt  requirements-3.8-dev.txt  requirements-3.8.txt  requirements-3.9-dev.txt  requirements-3.9.txt  requirements-test.txt  ruff.toml  save_load_trainee.caml  scratch.amlg  scratch_iris.ipynb  scratch_iris.py  text_8k.csv  version.json
.github/: CODEOWNERS
.github/.frogbot/: frogbot-config.yml
.github/templates/: version_summary.md
.github/workflows/: build-pr.yml  build-release.yml  build-test-package.yml  build.yml  compile-requirements.yml  create-branch-build.yml  create-pr-build.yml  create-release-build.yml  frogbot-scan-pull-request.yml  get-dependency-details.yml  pepify.yml  pytest.yml  rebuild-requirements.yml  release.yml  version-update.yml  workflow-summary.yml
config/: latest-mt-debug-howso.yml  latest-mt-howso.yml  latest-mt-noavx-traces-howso.yml  latest-mt-traces-howso.yml  latest-st-debug-howso.yml  latest-st-howso.yml  latest-st-traces-howso.yml
config/powershell/: Download-Tzdata.ps1
howso/: __main__.py
howso/client/: __init__.py  api.py  base.py  cache.py  client.py  configuration.py  exceptions.py  feature_flags.py  protocols.py  typing.py
howso/client/pandas/: __init__.py  client.py
howso/client/schemas/: __init__.py  aggregate_reaction.py  base.py  group_reaction.py  project.py  reaction.py  session.py  trainee.py  version.py
howso/client/tests/: __init__.py  test_api.py  test_client.py  test_exceptions.py  test_feature_flags.py  test_infer_feature_attributes.py  test_scikit.py
howso/client/tests/schemas/: test_base.py  test_reaction.py
howso/direct/: __init__.py  _utilities.py  client.py  core.py
howso/direct/schemas/: __init__.py  trainee.py
howso/direct/tests/: test_hierarchy.py  test_standalone.py
howso/engine/: __init__.py  client.py  project.py  session.py  trainee.py  typing.py
howso/engine/tests/: conftest.py  test_engine.py
howso/scikit/: __init__.py  scikit.py
howso/utilities/: __init__.py  constants.py  decorators.py  exceptions.py  fanout_features.py  features.py  installation_verification.py  internals.py  json_wrapper.py  locale.py  mapping.py  monitors.py  posix.py  progress.py  random.py  reaction.py  testing.py  tokenizing.py  types.py  utilities.py
howso/utilities/feature_attributes/: __init__.py  abstract_data.py  base.py  fanout_features.py  infer_feature_attributes.py  measurement_scale.py  models.py  pandas.py  protocols.py  relational.py  schema.py  serializers.py  suggestions.py  time_series.py  warnings.py
howso/utilities/feature_attributes/tests/: conftest.py  test_infer_feature_attributes.py  test_infer_feature_attributes_adc.py  test_infer_time_series_attributes.py  test_infer_time_series_attributes_adc.py  test_loose_feature_bounds.py  test_measurement_scale.py  test_models.py  test_suggestions.py  test_warnings.py  utils.py
howso/utilities/tests/: __init__.py  conftest.py  test_decorators.py  test_features.py  test_internals.py  test_monitors.py  test_progress.py  test_utilities.py
howso/utilities/tests/data/: NYPD_arrest_data_25K.parquet  example_timeseries.csv  example_timeseries.features.json  integers.csv  mini_stock_data.csv  monk1.csv  ts_trainee.caml
scrat/: scratch.py
